--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,9 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
                 </div>
             </div>
             <div class="w3_agileits_copy_right_social">
-                
+                 <div class="col-md-6 agileits_w3layouts_copy_right">
+					<p>&copy; 2022 kumar cruises. All rights reserved | Design by <a href="https://www.instagram.com/__riyas__muhammed/">mohammadriyaskm</a></p>
+				</div>
                 <div class="col-md-6 w3_agile_copy_right">
                     <ul class="agileinfo_social_icons">
                         <li><a href="https://www.facebook.com/kumar.cruise.5" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
