--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
               <div class="about-top_agile_its">
                 <h2>Welcome</h2>
                 <h5>to Kumar Cruise and Travels</h5>
-                <p>Kumar Cruises and Travels is a Boating Service With Dedicated Management and Staffs with More than 20 Years of Work Experience. Team Kumar is More Concentrated in Kochi. We have Luxury A/C Conference A Class Vessels ,Party Boats and House Boats.
-                <p>Kumar Cruises and Travels, Which Understand All Your Requirements as Depeandable Travel Associate and Offers You a Complete Tour Package Catering to All Your Requirments .We want our Client to have Fun, Learn Things, Meet People and do Stuff that they could never do at home </p>
-                <span>What sets Kumar Cruises and Travels apart from others is our Food Management system.We provide all type of food items.Our mainly special items are traditional sea foods</span>
+                <p>Boating service Kumar Cruises and Travels has a committed management team and employees with more than 20 years of work experience. Team Kumar Has a Greater Focus on Kochi. Party boats, houseboats, and luxury A/C conference class vessels are all available.</p>
+                <p>Kumar Cruises and Travels, a Dependable Travel Partner that Recognises All Your Needs, Offers You a Complete Tour Package Meeting All Your Needs. We want our clients to enjoy themselves, learn new skills, interact with others, and accomplish things they could never do at home. </p>
+                <span>Our Food Management approach distinguishes Kumar Cruises and Travels from other companies. We offer every kind of cuisine item. Traditional marine meals are the major specialties we offer.</span>
           </div>
            </div>
             <div class="clearfix"> </div>
@@ -185,8 +185,7 @@
                                     <div class="modal-body">
                                         <img src="images/g5.jpg" class="img-responsive" alt="Boat house">
                                         <h5>Conducting IV & collage Trips</h5>
-                                        <p>We can arrange school packages in kochi.with includes site seeing , food , accomodation,etc... call for more details 7591906861,9349483634 </p>
-                                    </div>
+                                        In Kochi, we can set up school packages. with regards to dining, lodging, and sightseeing, etc. For further information , phone 7591906861 or 9349483634. </p>
                                 </div>
                             </div>
                         </div>
@@ -209,7 +208,7 @@
                                 <i class="fa fa-ship" aria-hidden="true"></i>
                             </div>
                             <h4>Boating</h4>
-                            <p>We have luxury A/C conference A class vessels ,party boats and house boats.trips are in diffrent type.its deppends on hours you taken</p>
+                             <p>Party boats, houseboats, and luxury A/C conference class boats are all available.The cost depends on the number of hours you spend.</p>
                         </div>
                     </div>
                     <div class="col-md-4 w3ls_banner_bottom_grid">
@@ -218,8 +217,7 @@
                                 <i class="fa fa-bed" aria-hidden="true"></i>
                             </div>
                             <h4>Stay</h4>
-                            <p>We also arrange stays for school trips,family trips etc...we have lots of room or dormetries available in kochi.whatever type rooms you want we will come up with it </p>
-                        </div>
+                             <p>We also coordinate lodging for family vacations, school trips, etc. In Kochi, there are numerous rooms and dormitories available .Any type of room you desire, we can create it. </p>
                     </div>
                     <div class="col-md-4 w3ls_banner_bottom_grid">
                         <div class="inner_w3l_agile_grids">
@@ -227,7 +225,7 @@
                                 <i class="	fa fa-apple" aria-hidden="true"></i>
                             </div>
                             <h4>Food</h4>
-                            <p>Providing food is our main service.We will arrange any type of sea food  you specify .The Food we serves Will be 100% hygien and Great Qualitate</p>
+                            <p>Food delivery is our primary service. Any type of seafood that you select will be prepared. The food we offer  will be excellent quality and completely hygienic.</p>
                         </div>
                     </div>
                     <div class="clearfix"> </div>
@@ -247,7 +245,7 @@
                         <div class="w3-agile-news-img">
                             <a href="#myModal" data-toggle="modal"><img src="images/g1.jpg" alt="" /></a>
                             <h4><a href="#myModal" data-toggle="modal">Bolgatty palace </a></h4>
-                            <p> Bolgatty palace is a former place built by the Dutch in India on Bolgatty island in Kochi ,Kerala .it is one of the oldest Dutch palaces outside holland ,the palace was built in 1744.now bolgatty palace is an hotel working under KTDC.There is also conducting marriage functions  </p>
+                            <p>  On Bolgatty island in Kochi, Kerala, the Dutch once constructed Bolgatty Palace. The palace was constructed in 1744, making it one of the oldest Dutch palaces outside of Holland. Bolgatty Palace is currently a hotel managed by KTDC. Additionally, wedding ceremonies are conducted.  </p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -256,7 +254,7 @@
                         <div class="w3-agile-news-img">
                             <a href="#myModal" data-toggle="modal"><img src="images/g2.jpg" alt="" /></a>
                             <h4><a href="#myModal" data-toggle="modal">Vallarpadam container terminal </a></h4>
-                            <p>The Kochi international container trasshipment terminal ,locally known as the vallarpadam terminal,is the first transshipment terminal in india and the first container terminal to operate in a SEZ.it is a part of the cochin port in kochi </p>
+                            <p>The first transshipment facility in India and the first container terminal to operate in a Special Economic Zone is the Kochi international container trasshipment terminal, also known locally as the vallarpadam terminal. It is a piece of kochi's Cochin Port. </p>
                         </div>
                         <div class="clearfix"> </div>
                     </div> 
@@ -268,8 +266,7 @@
                         <div class="w3-agile-news-img">
                             <a href="#myModal" data-toggle="modal"><img src="images/g4.jpg" alt="" /></a>
                             <h4><a href="#myModal" data-toggle="modal">Oil tanker birth </a></h4>
-                            <p> Oil tanker birth is also known as petroleum tanker,is a ship designed for the bulk transport of oil or its product .There are two basic type of oil tanker:crude tanker and product tanker.Oil tankers are often classified by their size as well as their occupation </p>
-                            </div>
+                            <p>An oil tanker, sometimes referred to as a petroleum tanker, is a ship created specifically for the bulk transportation of oil or its byproduct.Crude tankers and product tankers are the two basic types of oil tankers.Size and profession are two factors that are frequently used to categorise oil tankers. </p>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="col-md-6 news-left">
@@ -277,7 +274,7 @@
                         <div class="w3-agile-news-img">
                             <a href="#myModal" data-toggle="modal"><img src="images/g3.jpg" alt="" /></a>
                             <h4><a href="#myModal" data-toggle="modal">Dolphin areas  </a></h4>
-                            <p>Marine drive is the binding spot  of Vembanattu kayal ,Periyar and Arabian sea.there is a big chance to see dolphin in that area vembanatt kayal and pariyar is river one coming from north side and one coming from south side .if you have luck you will see dolphins nearby.</p>
+                            <p>The Arabian Sea, Periyar, and Vembanattu Kayal converge at Marine Drive.There is a good probability that you may observe dolphins in the vicinity of the rivers Vembanatt Kayal and Pariyar, one of which flows from the north and the other from the south.If you're lucky, dolphins will be in the area.</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div> 
@@ -289,7 +286,7 @@
                         <div class="w3-agile-news-img">
                             <a href="#myModal" data-toggle="modal"><img src="images/k4.jpg" alt="" /></a>
                             <h4><a href="#myModal" data-toggle="modal">Chinese fishing net</a></h4>
-                            <p>Chinese fishing nets are a type of stationary lift net in India and Indonesia. They are fishing nets that are fixed land installations for fishing. While commonly known as "Chinese fishing nets" in India, the more formal name for such nets is "shore operated lift nets".</p>
+                             <p>In India and Indonesia, Chinese fishing nets are a sort of stationary lift net. They are permanent land-based fishing installations called fishing nets. Although they are more formally termed as "shore operated lift nets," these nets are also known as "Chinese fishing nets" in India.</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -298,7 +295,7 @@
                         <div class="w3-agile-news-img">
                             <a href="#myModal" data-toggle="modal"><img src="images/k3.jpg" alt="" /></a>
                             <h4><a href="#myModal" data-toggle="modal">Cochin shipyard </a></h4>
-                            <p>Cochin Shipyard Ltd is a shipbuilding facility in India. It is part of a line of maritime-related facilities in the port-city of Kochi, in the state of Kerala, India. Of the services provided by the shipyard are building platform supply vessels and double-hulled oil tankers.</p>
+                           <p>An Indian shipbuilding plant is called Cochin Shipyard Ltd. It is one of a number of maritime-related facilities in Kerala, India's port city of Kochi. The shipyard offers a variety of services, including the construction of double-hulled oil tankers and platform supply vessels.</p>
                         </div>
                         <div class="clearfix"> </div>
                     </div> 
@@ -368,8 +365,10 @@
                 </div>
             </div>
             <div class="w3_agileits_copy_right_social">
-                
-                <div class="col-md-6 w3_agile_copy_right">
+                 <div class="col-md-6 agileits_w3layouts_copy_right">
+	                 <p>&copy; 2022 kumar cruises. All rights reserved | Design by <a href="https://www.instagram.com/__riyas__muhammed/">mohammadriyaskm</a></p>
+                 </div>
+                 <div class="col-md-6 w3_agile_copy_right">
                     <ul class="agileinfo_social_icons">
                         <li><a href="https://www.facebook.com/kumar.cruise.5" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="https://instagram.com/kumar_cruises?igshid=OGQ2MjdiOTE=" class="wthree_twitter"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
