--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -95,11 +94,10 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 				</div>
 				<div class="col-md-7 agileits-about-right">
 					<h5>kumar cruise and travels.</h5>
-					<p>kumar cruises and travels is a boating service with dedicated management and staffs with 20 years of work experience.team kumar is more concentrated in kochi.we have luxury A/C conference A class vessels ,party boats and house boats.
-					<p>kumar cruises and travels,which understand all your requirements as adepeandable travel associate and offers you a complete tour package catering to all your requirments .we want our client to have fun.lern things meet people and do stuf that they could never do at home </p>
+					<p>Kumar Cruises and Travels is a boating service with dedicated management and staffs with more than 20 years of work experience.team kumar is more concentrated in kochi.We have luxury A/C conference A class vessels ,party boats and house boats.</p>
+					<p>As a dependable travel partner, Kumar Cruises and Travels is aware of all of your needs and provides you with a comprehensive vacation package. We want our customers to enjoy themselves, learn fresh abilities, create fresh connections, and do things they could never accomplish at home. </p>
 					</br>
-					<span>what sets kumar cruises and travels apart from others is our food management system.we provide all type of food items.our mainly special items are traditional sea food</span>
-				  </div>
+					<span>Our culinary management approach distinguishes Kumar Cruises and Travels from other travel companies.We offer every kind of cuisine item.Traditional marine meals are the major specialties we offer.</span>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
@@ -122,8 +120,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 							<p>1</p>
 						</div>
 						<div class="offers-text">
-							<p>we have lots of properties in kochi we will provide what you want.luxury appartments,tent stay,wood stay, normal rooms,and dormetries.if you are a hundred people,dont worry.</p>
-						</div>
+							<p>In Kochi, we have a lot of properties. We'll provide you everything you need.Luxury apartments, tent stays, wood stays, regular rooms, and dorms are all available.Do not be concerned if there are 100 of you.</p>
 						<div class="clearfix"> </div>
 					</div>
 					<div class="offers-left-grids offers-left-middle">
@@ -131,7 +128,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 							<p>2</p>
 						</div>
 						<div class="offers-text">
-							<p>educational and innovative boating services.in our boating service we provide a guide as compulsion.he discribe every thing about "queen of arabian sea".and you also enjoy music and dj </p>
+							<p>Boating services that are innovative and educational.We offer a guide as a requirement as part of our sailing service.He describes the "Queen of the Arabian Sea" in detail.Additionally, you like music and DJ.</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -140,7 +137,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 							<p>3</p>
 						</div>
 						<div class="offers-text">
-							<p>crab,shrimp,squid,clam,duck,fish,chicken,mutton ,anything, what do you want, team kumar will arrange that for you.we serve hygienic and quality food .if you can afford ,it we can arrange home made meels </p>
+							<p>Anything you desire, whether it is crab, prawns, squid, clams, duck, fish, chicken or mutton, Team Kumar will make arrangements for it.We offer wholesome, high-quality cuisine. </p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -149,14 +146,13 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 							<p>4</p>
 						</div>
 						<div class="offers-text">
-							<p> we will arrange what kind of parties like birtday functions,marrige receptions, etc .we provide all helps to do your partu make memmorable  </p>
-						</div>
+							<p>Any type of party, including birthday celebrations and wedding receptions, can be planned by us.We offer everything assistance needed to make your event memorable.</p>
 						<div class="clearfix"> </div>
 					</div>
 				</div>
 				<div class="col-md-6 wthree-offers-right">
-					<h5>we proffer diffrent types of trips .mainly it deppends upon time we taken for complete our trip.we will customize the trip according to how many hourts you need</h5>
-					<p>minimum ten to fifteen sites cover in a normal trip.more than two hours we also cover backwaters at varappuha,mulavukadu,etc....here available one day trips  and it  mainly takes trips from kochi to azhikode and kochi to kumarakam. some important sites</p>
+					<h5>We prefer diffrent types of trips .Mainly it deppends upon time we taken for complete our trip.We will customize the trip according to how many hours you need</h5>
+					<p>In a typical journey, at least 10 to 15 places are visited.We also cover the backwaters at Varappuha, Mulavukadu, etc. for more than two hours.There are also one-day excursions available, with the most popular routes being kochi to azhikode and kochi to kumarakam. a few significant places</p>
 					<ul>
 						<li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> bolgatty palace and island resort</a></li>
 						<li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> oil tanker birth </a></li>
@@ -209,8 +205,10 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
                 </div>
             </div>
             <div class="w3_agileits_copy_right_social">
-                
-                <div class="col-md-6 w3_agile_copy_right">
+		     <div class="col-md-6 agileits_w3layouts_copy_right">
+	                 <p>&copy; 2022 kumar cruises. All rights reserved | Design by <a href="https://www.instagram.com/__riyas__muhammed/">mohammadriyaskm</a></p>
+                     </div>
+                    <div class="col-md-6 w3_agile_copy_right">
                     <ul class="agileinfo_social_icons">
                         <li><a href="https://www.facebook.com/kumar.cruise.5" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="https://instagram.com/kumar_cruises?igshid=OGQ2MjdiOTE=" class="wthree_twitter"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
