--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 <!-- //font-awesome-icons -->
 <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6232720002813017" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- header -->
