--- a/icons.html
+++ b/icons.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -18,6 +17,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 <!-- //font-awesome-icons -->
 <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6232720002813017" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- header -->
@@ -97,10 +97,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 							<h3 class="page-header page-header icon-subheading">vinayaka </h3>
 								<div class="vinayaka ">
 									<div class="container">
-									<p class="para p-5">vinayaka cruise is an A/C boat comes with well designed upper deck and luxury lower deck with all modern amenities. 
-										the boat comes with DJ Music system with HQ sound as well as lighting and guide. it has more than 100 capasity and all type of life saving equipments.
-									    when coming to engine side vinayaka is a turbo engine boat.the lowerdeck of vinayaka is a premium A\C conference hall.it includes stage,dancing floor, premium DJ system,LED disco lights,JBL speekers with poineer,two toilets etc... 
-								        first floor or our well designed upperdeck si more suitable for site seeing
+									<p class="para p-5">A/C boat Vinayaka Cruise has a luxurious lower deck with all modern facilities and a well-designed upper deck. The boat is equipped with a DJ music system with high-quality sound, lighting, and a guide. It has all different kinds of life-saving devices and more than 100 capacity.  Vinayaka is a boat with a turbo engine while approaching the engine side.Vinayaka's lowerdeck houses a high-end air-conditioned conference room.It has a stage, a dance floor, a professional DJ system, LED disco lights, JBL speakers with a performer, two restrooms, and more. The first level or our thoughtfully designed upperdeck is better for sightseeing.
 									</p>
 									<div class="image_vinayaka p-3">
 										<div class="wthree-about-left-info col-lg-6 ">
@@ -128,10 +125,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 
 								</h3>
 									<div class="container">
-										<p class="para p-5">Sree hari is an non A/C house boat model boat comes with well designed upper deck and traditional lower deck with all modern amenities. 
-									    	The boat comes with DJ Music system as well as lighting and guide. It has more than 60 capasity and all type of life saving equipments.
-											The lowerdeck of sreehari is a well cushioned conference hall.It includes dancing floor,DJ system,LED  lights,JBL speekers , toilets etc... 
-											First floor or our well designed upperdeck is more beautiful for site seeing.
+										<p class="para p-5">A non-air-conditioned houseboat variant called Sree Hari has a traditionally styled lower deck and a well-designed upper deck.Along with a DJ music system, lighting, and a guide, the boat is equipped. It can hold more than 60 people and is equipped with all kinds of lifesaving tools.A comfortable conference room may be found on the lower deck of the Sreehari.It has a dance floor, a DJ system, LED lights, JBL speakers, and restrooms, among other things. The first level or our thoughtfully constructed upperdeck is more attractive for sightseeing.
 										</p>
 										<div class="image_sreehari p-3">
 											<div class="wthree-about-left-info col-lg-6 ">
@@ -155,10 +149,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 								<h3 class="page-header icon-subheading">Malabar</h3>
 							</div>
 							<div class="container">
-								<p class="para p-5">Malabar is a non A/C boat comes with well designed upper deck and  lower deck with all modern amenities. 
-									The boat comes with DJ Music system with HQ sound as well as lighting and guide. It has more than 50 capasity and all type of life saving equipments.
-									When coming to engine side its a double engine boat.the lowerdeck of malabar is a  well defined conference hall.it includes  premium DJ system,LED disco lights,JBL speekers with poineer,two toilets etc... 
-									first floor is more suitable for site seeing.
+								<p class="para p-5">The Malabar is a non-air-conditioned boat with a well-designed top deck and lower deck that are equipped with all of today's conveniences. The boat is equipped with a DJ music system with high-quality sound, lighting, and a guide. It can hold more than 50 people and is equipped with all kinds of lifesaving tools.It is a two engine boat when approaching the engine side.The conference space on the lower deck of the Malabar is well defined.It features a top-notch DJ system, LED disco lights, JBL speakers with a podium, two restrooms, etc. For sightseeing, the first floor is better.
 								</p>  
 								<div class="imgage_malabar  p-5">
 									<div class="wthree-about-left-info col-lg-6 ">
@@ -181,10 +172,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 								<h3 class="page-header icon-subheading">Angel</h3>
 							</div>
 							<div class="container">
-								<p class="para p-5">Angel is also a non A/C house boat model boat comes with well designed single deck and is also traditional with all modern amenities. 
-									The boat comes with DJ Music system as well as lighting and guide. It has more than 40 capasity and all type of life saving equipments.
-									The setes of angel is  well cushioned.The floor is dancing floor with DJ system,LED  lights,JBL speekers , toilets etc... 
-									Angel is a high speed boat and its also beautiful for site seeing.
+								<p class="para p-5">The Angel is a non-air-conditioned houseboat style that has a well-designed single deck and is both traditional and equipped with all current conveniences. Along with a DJ music system, lighting, and a guide, the boat is equipped. It can hold more than 40 people and is equipped with all kinds of lifesaving tools.The angel's seat has good padding.The area features a dance floor with a DJ system, LED lights, JBL speakers, and other amenities. The Angel is a fast boat that is also lovely for sightseeing.
 								</p>
 								<div class="imgage_vinayaka col-lg-12 p-5">
 									<div class="wthree-about-left-info col-lg-6 ">
@@ -243,8 +231,10 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
                 </div>
             </div>
             <div class="w3_agileits_copy_right_social">
-                
-                <div class="col-md-6 w3_agile_copy_right">
+		  <div class="col-md-6 agileits_w3layouts_copy_right">
+	              <p>&copy; 2022 kumar cruises. All rights reserved | Design by <a href="https://www.instagram.com/__riyas__muhammed/">mohammadriyaskm</a></p>
+                 </div>
+                 <div class="col-md-6 w3_agile_copy_right">
                     <ul class="agileinfo_social_icons">
                         <li><a href="https://www.facebook.com/kumar.cruise.5" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="https://instagram.com/kumar_cruises?igshid=OGQ2MjdiOTE=" class="wthree_twitter"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
