--- a/typography.html
+++ b/typography.html
@@ -18,6 +18,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 <!-- //font-awesome-icons -->
 <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6232720002813017" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- header -->
@@ -93,8 +94,8 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 			</div>
 			<div class="col-md-12 agileits-about-right">
 					<h5></h5>
-					<p> Caters is the most Important Part of Kumar Cruises and Travels.We provide very hygienic and quality food to all customers.We caters for everything from Evening Tea Snacks to targe luxury dinners.We supply verity fresh sea food dishes in affordable rate </p>
-					<p>WE can arrange Veg or Non-Veg  foods Regardlessly.Our main is Some Kerala Traditional Foods. Team Kumar's Main dishes is : Karimeen(carp), chemmeen(shrimp), kakka(clam), kozhuva, kanamp, kunthal(squid), crab, other fish items, native duck ,chicken, mutton dishes, Grilled items, Baked food items, chinese food items etc   .  </p>
+					<p>The most crucial aspect of Kumar Cruises and Travels is the catering.All of our customers receive very hygienic and high-quality cuisine from us.We provide catering for everything, including lavish dinners and evening tea snacks.We provide a variety of cheap dishes made with fresh seafood. </p>
+					<p>We may arrange for either vegetarian or non-vegetarian food.Some Kerala Traditional Foods are our main course. Karimeen (carp), Chemmeen (shrimp), Kakka (clam), Kozhuva, Kanamp, Kunthal (squid), crab, various fish items, native duck, chicken and mutton dishes, grilled items, baked things, Chinese culinary items, etc. are Team Kumar's main specialties. </p>
 					</br>
 					<span></span>
 				  </div>
@@ -238,7 +239,9 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
                 </div>
             </div>
             <div class="w3_agileits_copy_right_social">
-                
+                 <div class="col-md-6 agileits_w3layouts_copy_right">
+	            <p>&copy; 2022 kumar cruises. All rights reserved | Design by <a href="https://www.instagram.com/__riyas__muhammed/">mohammadriyaskm</a></p>
+                 </div>
                 <div class="col-md-6 w3_agile_copy_right">
                     <ul class="agileinfo_social_icons">
                         <li><a href="https://www.facebook.com/kumar.cruise.5" class="w3_agileits_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
