--- a/about.html
+++ b/about.html
@@ -172,7 +172,41 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 		</div>
 	</div>
 	<!-- offers -->
-		
+	<div class="grid_3 grid_4 w3_agileits_icons_page">
+	<section id="new">
+		<h3 class=" container mx-auto page-header icon-subheading">Kadamakudy island trip</h3>
+			<div class="vinayaka ">
+				<div class="container">
+				<p class="para p-5">A group of 14 islands known as Kadamakudy or Kadamakkudy may be found less than 10 kilometres from the town of Kochi. The lush green mangroves, the relaxed village atmosphere, the picturesque paddy fields, and the rusted traditional cottages still make up the pristine charm of Kadamakudy Island.</p>
+				<p>
+					The name Kadamakudy is derived from the Malayalam phrase Kadannal Kudungi, which implies that it is difficult to leave the island once you put foot on it. We, the locals, seldom have to leave the hamlet because of the rich fish life, the rice fields, and the organic farms. Additionally, visitors are repelled by the islands' breathtaking landscape, the tranquilly of a far-off settlement, and the endless bodies of water all around them.</p>
+
+                <p>The Backwaters, which cover all but the ground where our homes, roads, and ridges of paddy fields lie, are the greatest attraction on our island.
+					The dense mangrove forest sections, the pokkali paddy fields that were given heritage status, and the coconut trees are a blessing to Kadamakudy village.
+					</p>
+						<p>We'll set up a memorable and lovely trip to the heavenly village.This is a fantastic opportunity for you to take your family and friends on a backwater cruise through Kadamakudy. </p>
+				<div class="image_vinayaka p-3">
+					<div class="wthree-about-left-info col-lg-6 ">
+						<img src="images/v1.png" alt="" />
+					</div>
+					<div class="wthree-about-left-info col-lg-6 ">
+						<img src="images/v2.png" alt="" /></br>
+					</div>
+					<div class="wthree-about-left-info col-lg-6 ">
+						<img src="images/v3.png" alt="" />
+					</div>
+					<div class="wthree-about-left-info col-lg-6 ">
+						<img src="images/v4.jpg" alt="" />
+					</div>
+				</div>
+				</div>
+
+			</div>
+
+	</section>
+	</div>
+	<br>
+	<br>	
 
  <!-- footer -->
  <div class="footer">
