--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ Smart phone Compatible web template, free webdesigns for Nokia, Samsung, LG, Son
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html"> KUMAR cruises & travels </a></h1>
+					<h1><a class="navbar-brand" href="index.html"> KUMAR cruises</a></h1>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
